# popcorn-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: release.yml
docs/: release-1.0.md
docs/superpowers/plans/: 2026-03-23-pop-health-check-backend.md  2026-03-23-pop-health-check-cli.md  2026-03-27-vm-commands.md
docs/superpowers/specs/: 2026-03-12-cli-improvements-design.md  2026-03-13-backend-agent-ergonomics.md  2026-03-23-pop-health-check-design.md  2026-03-23-popcorn-upgrade-design.md  2026-03-23-version-check-design.md  2026-03-27-vm-commands-design.md
scripts/: check-version-bump.sh  test-install.sh
src/popcorn_cli/: __init__.py  __main__.py  cli.py  formatting.py
src/popcorn_core/: __init__.py  archive.py  auth.py  client.py  config.py  errors.py  local_state.py  operations.py  resolve.py  validation.py
tests/: conftest.py  test_auth_env_gate.py  test_client_proxy.py  test_config.py  test_deploy.py  test_errors.py  test_formatting.py  test_local_state.py  test_operations.py  test_parser.py  test_resolve.py  test_upgrade.py  test_validation.py  test_verify.py  test_vm_formatting.py  test_vm_operations.py  test_vm_parser.py
